--- a/index.html
+++ b/index.html
@@ -14,18 +14,37 @@
 <section class="hero container">
 <div class="hero__content">
 	<div class="header">
-		<img class="logo" src="./images/logo.png" alt="logo of company">
+		<a href="#"><img class="logo" src="./images/logo.png" alt="logo of company"></a>
 		<nav>
 			<ul class="items">
-				<li class="item"><a class="item__link" href="#">consectetur</a></li>
-				<li class="item"><a class="item__link" href="#">sit amet</a></li>
-				<li class="item"><a class="item__link" href="#">eiusmod tempor</a></li>
+				<li class="item"><a class="item__link" href="#">Home</a></li>
+				<li class="item"><a class="item__link" href="#">About us</a></li>
+				<li class="item"><a class="item__link" href="#">Our products</a></li>
 			</ul>
 		</nav>
 	</div>
+	<!--	mobile items -->
+	
+	<div class="mobile-container">
+		<button class="header__burger-btn" id="burger">
+			<span></span>
+			<span></span>
+			<span></span>
+		</button>
+		
+		<nav class="nav-mobile">
+			<a class="mobile-logo" href="#"><img src="./images/logo.png" alt="logo of company"></a>
+			<ul class="mobile-items">
+				<li class="mobile-item"><a class="item__link" href="#">Home</a></li>
+				<li class="mobile-item"><a class="item__link" href="#">About us</a></li>
+				<li class="mobile-item"><a class="item__link" href="#">About us</a></li>
+			</ul>
+		</nav>
+	</div>
+<!--	===================================  -->
 	<div class="hero__text">
 		<h1 class="hero__text-header">Lorem ipsum<br> dolor sit amet.</h1>
-		<h3 class="hero__text">Lorem ipsum dolor sit.</h3>
+		<h3 class="hero__text-subheader">Lorem ipsum dolor sit.</h3>
 		<p class="hero__list"><img class="hero-round" src="./images/roundWithBird.png" alt="">do <span>$10 000</span> consectetur elit</p>
 		<p class="hero__list"><img class="hero-round" src="./images/roundWithBird.png" alt=""><span>30%</span> set do eiusmod tempor</p>
 		<p class="hero__list"><img class="hero-round" src="./images/roundWithBird.png" alt="">do <span>17%</span> adipiscing elit set do</p>
@@ -63,13 +82,15 @@
 
 <section class="form container">
 		<div class="form__field">
-			<div class="form__left">
-				<h3>Consectetur sed do eiusmod</h3>
-				<input type="text" placeholder="Name">
-				<input type="text" placeholder="E-mail">
-				<p><input type="checkbox">I accept Privacy policy</p>
-				<button>submit form</button>
-			</div>
+			<form class="form__left" method="post" action="">
+				<h3>Consectetur<br> sed do eiusmod</h3>
+				<label for="name"></label>
+				<input id="name" class="form__input" name="user-name" type="text" placeholder="Name">
+				<label for="email"></label>
+				<input id="email" class="form__input" name="user-email" type="text" placeholder="E-mail">
+				<p class="checkbox__string"><input class="form__input-checkbox" type="checkbox">I accept Privacy policy</p>
+				<button class="form__btn">submit form</button>
+			</form>
 			<div class="form__right">
 				<img class="form_img" src="./images/back-fon.png" alt="">
 				<img class="form__girl" src="./images/women.png" alt="">
@@ -87,14 +108,92 @@
 	</div>
 <div class="footer__content">
 	<div class="footer__control">
-		<img src="./images/logo.png" alt="logo">
+		<a href="#"><img class="logo" src="./images/logo.png" alt="logo of company"></a>
 		<div class="footer__social">
-			<a href="#"><img src="./icons/insta.svg" alt="instagram"></a>
-			<a href="#"><img src="./icons/music.svg" alt="music"></a>
-			<a href="#"><img src="./icons/linked.svg" alt="linked in"></a>
-			<a href="#"><img src="./icons/facebook.svg" alt="facebook"></a>
-			<a href="#"><img src="./icons/telegram.svg" alt="telegram"></a>
-			<a href="#"><img src="./icons/youtube.svg" alt="youtube"></a>
+			<a href="#">
+				<svg class="social__icon" width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				<defs>
+					<clipPath id="clip65_1272">
+						<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="white" fill-opacity="0"/>
+					</clipPath>
+				</defs>
+				<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="#FFFFFF" fill-opacity="0"/>
+				<g clip-path="url(#clip65_1272)">
+					<path d="M21.33 5.33C24.27 5.33 26.66 7.72 26.66 10.66L26.66 21.33C26.66 24.27 24.27 26.66 21.33 26.66L10.66 26.66C7.72 26.66 5.33 24.27 5.33 21.33L5.33 10.66C5.33 7.72 7.72 5.33 10.66 5.33L21.33 5.33Z" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round"/>
+					<path d="M16 20C13.79 20 12 18.2 12 16C12 13.79 13.79 12 16 12C18.2 12 20 13.79 20 16C20 18.2 18.2 20 16 20Z" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round"/>
+					<path d="M22 10L22 10" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round" stroke-linecap="round"/>
+				</g>
+			</svg></a>
+			<a href="#">
+				<svg class="social__icon" width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				<defs>
+					<clipPath id="clip65_1273">
+						<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="white" fill-opacity="0"/>
+					</clipPath>
+				</defs>
+				<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="#FFFFFF" fill-opacity="0"/>
+				<g clip-path="url(#clip65_1273)">
+					<path d="M12 15.99C10.94 15.99 9.91 16.31 9.03 16.89C8.16 17.48 7.47 18.31 7.07 19.29C6.66 20.26 6.56 21.33 6.76 22.37C6.97 23.4 7.48 24.35 8.23 25.1C8.97 25.84 9.92 26.35 10.96 26.56C11.99 26.76 13.06 26.66 14.04 26.25C15.01 25.85 15.84 25.17 16.43 24.29C17.02 23.41 17.33 22.38 17.33 21.33L17.33 5.33C17.33 7.09 18.03 8.79 19.28 10.04C20.53 11.29 22.23 11.99 24 11.99" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round" stroke-linecap="round"/>
+				</g>
+			</svg>
+			</a>
+			<a href="#">
+				<svg class="social__icon" width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				<defs>
+					<clipPath id="clip65_1274">
+						<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="white" fill-opacity="0"/>
+					</clipPath>
+				</defs>
+				<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="#FFFFFF" fill-opacity="0"/>
+				<g clip-path="url(#clip65_1274)">
+					<path d="M23.99 5.33C25.47 5.33 26.66 6.52 26.66 7.99L26.66 23.99C26.66 25.47 25.47 26.66 23.99 26.66L7.99 26.66C6.52 26.66 5.33 25.47 5.33 23.99L5.33 7.99C5.33 6.52 6.52 5.33 7.99 5.33L23.99 5.33Z" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round"/>
+					<path d="M10.66 14.66L10.66 21.33" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round" stroke-linecap="round"/>
+					<path d="M10.66 10.66L10.66 10.68" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round" stroke-linecap="round"/>
+					<path d="M16 21.33L16 14.66" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round" stroke-linecap="round"/>
+					<path d="M21.33 21.33L21.33 17.33C21.33 16.62 21.05 15.94 20.55 15.44C20.05 14.94 19.37 14.66 18.66 14.66C17.95 14.66 17.28 14.94 16.78 15.44C16.28 15.94 16 16.62 16 17.33" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round" stroke-linecap="round"/>
+				</g>
+			</svg>
+			</a>
+			<a href="#">
+				<svg class="social__icon" width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				<defs>
+					<clipPath id="clip65_1275">
+						<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="white" fill-opacity="0"/>
+					</clipPath>
+				</defs>
+				<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="#FFFFFF" fill-opacity="0"/>
+				<g clip-path="url(#clip65_1275)">
+					<path d="M9.33 18.66L13.33 18.66L13.33 28L18.66 28L18.66 18.66L22.66 18.66L23.99 13.33L18.66 13.33L18.66 10.66C18.66 10.31 18.8 9.97 19.05 9.72C19.3 9.47 19.64 9.33 19.99 9.33L23.99 9.33L23.99 4L19.99 4C18.23 4 16.53 4.7 15.28 5.95C14.03 7.2 13.33 8.89 13.33 10.66L13.33 13.33L9.33 13.33L9.33 18.66Z" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round"/>
+				</g>
+			</svg>
+			</a>
+			<a href="#">
+				<svg class="social__icon" width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<defs>
+						<clipPath id="clip65_1276">
+							<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="white" fill-opacity="0"/>
+						</clipPath>
+					</defs>
+					<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="#FFFFFF" fill-opacity="0"/>
+					<g clip-path="url(#clip65_1276)">
+						<path d="M20 13.33L14.66 18.66L22.66 26.66L28 5.33L4 14.66L9.33 17.33L12 25.33L16 19.99" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round" stroke-linecap="round"/>
+					</g>
+				</svg>
+			</a>
+			<a href="#">
+				<svg class="social__icon" width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<defs>
+						<clipPath id="clip65_1277">
+							<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="white" fill-opacity="0"/>
+						</clipPath>
+					</defs>
+					<rect rx="0.000000" width="31.000000" height="31.000000" transform="translate(0.500000 0.500000)" fill="#FFFFFF" fill-opacity="0"/>
+					<g clip-path="url(#clip65_1277)">
+						<path d="M22.66 6.66C25.61 6.66 28 9.05 28 12L28 20C28 22.94 25.61 25.33 22.66 25.33L9.33 25.33C6.38 25.33 4 22.94 4 20L4 12C4 9.05 6.38 6.66 9.33 6.66L22.66 6.66Z" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round"/>
+						<path d="M19.99 16L13.33 20L13.33 12L19.99 16Z" stroke="#D5C9BE" stroke-opacity="1.000000" stroke-width="2.000000" stroke-linejoin="round"/>
+					</g>
+				</svg>
+			</a>
 		</div>
 		<button class="footer__btn">order</button>
 	</div>
